--- a/Comart/src/main/resources/application.properties
+++ b/Comart/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
 
+#hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+#conf. de la DB
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/Travel2021?useSSL=false&serverTimeZone=UTC
+spring.datasource.username=root
+spring.datasource.password=toor
