--- a/Comart/src/main/resources/application.properties
+++ b/Comart/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/Travel2021?useSSL=false&serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=toor
